--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -111,8 +111,8 @@ Acknowledgments | ##	||
 Rising temperatures are influencing forests on many scales, with potentially strong variation vertically across forest strata. 
 Using published research and new analyses, we evaluate how microclimate and leaf temperatures, traits, and gas exchange vary vertically in forests, shaping tree ecology and ecosystem function. 
 In closed-canopy forests, upper-canopy leaves are exposed to the highest solar radiation and evaporative demand, which can elevate leaf temperature ($T_{leaf}$), particularly when transpirational cooling is curtailed by limited stomatal conductance.
-However, foliar traits also vary across height or light gradients, partially mitigating the elevation of upper-canopy $T_{leaf}$.
-Leaf metabolism generally increases with height across the vertical gradient, yet differences in thermal sensitivity and damage thresholds across the gradient appear modest.
+However, foliar traits also vary across height or light gradients, partially mitigating and protecting against the elevation of upper-canopy $T_{leaf}$.
+Leaf metabolism generally increases with height across the vertical gradient, yet differences in thermal sensitivity across the gradient appear modest.
 Scaling from leaves to trees, tall trees have higher absolute metabolic capacity and growth at both individual and ecosystem levels, yet are disproportionately vulnerable to drought and damaging $T_{leaf}$, particularly under climate change. 
 In contrast, understory trees experience fewer extreme high $T_{leaf}$'s but have fewer cooling mechanisms and thus may be disproportionately impacted under hot, humid conditions, or when exposed to harsher conditions through canopy disturbance.
 As the climate changes, integrating the patterns and mechanisms reviewed here into models will be critical to forecasting forest-climate feedbacks.
