NPQ section update

--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -316,7 +316,7 @@ Higher photosynthetic rates (per unit leaf area) and more frequent stomatal clos
 
 ## 3.#. Biochemical protection against foliage light and heat damage
 
-Biochemical protection against foliage light and heat damage increase with peak radiation loads, and thus tend to be higher in the upper canopy than in the understory (Table `r table_leaf_traits`). Heat and associated VPD can indirectly impact the photosynthetic machinery by reducing the capacity to use light energy for photochemistry, thereby increasing the potential for photoinhibition. Accumulation of excess light energy results in overreduction of the electron transport chain and the formation of harmful reactive oxygen species (ROS) [@niyogiSafetyValvesPhotosynthesis2000; @suzukiReactiveOxygenSpecies2006a]. A ubiquitous defense is a rapidly inducible non-photochemical quenching (NPQ) mechanism that responds to the increased thylakoid pH gradient caused by accumulated light energy [@niyogiSafetyValvesPhotosynthesis2000; @gossBiodiversityNPQ2015]. This form of NPQ is accomplished by the interconversion of xanthophyll cycle pigments—violaxanthin, antheraxanthin, and zeaxanthin (VAZ)—which regulates the capacity for de-excitation of chlorophyll through thermal dissipation instead of photochemistry. Due to higher leaf temperatures and hydraulic limitations, upper canopy leaves spend more time with stomata closed, and therefore require a high capacity to dissipate excess light energy [@niinemetsPhotosynthesisResourceDistribution2007]. Correspondingly, leaves in higher light environments show a greater capacity for NPQ and higher concentrations of VAZ as well as other carotenoids (e.g., beta carotene and lutein) employed as antioxidant defenses [Table `r table_leaf_traits`, @niinemetsAcclimationHighIrradiance1998; @garcia-plazaolaAcclimationAntioxidantPools2004a; @scartazzaInvestigatingEuropeanBeech2016a]. In contrast, leaves deeper in the canopy experience rapid light and temperature surges (can exceed 10˚C) during sunflecks [@waySunflecksTreesForests2012]. In order to maximize carbon uptake and minimize damage during sunflecks, shade-acclimated leaves tend to induce photochemical processes more quickly [@urbanInductionPhotosynthesisImportance2007], and also show a steeper response of NPQ to light compared to sun-acclimated, upper canopy leaves [@scartazzaInvestigatingEuropeanBeech2016a].
+Biochemical protection against foliage light and heat damage increase with peak radiation loads, and thus tend to be higher in the upper canopy than in the understory (Table `r table_leaf_traits`). By reducing photosynthesis, heat and associated stomatal closure from VPD can indirectly reduce the capacity to use light energy for photochemistry, thereby increasing the potential for photoinhibition. Accumulation of excess light energy results in overreduction of the electron transport chain and the formation of harmful reactive oxygen species (ROS) [@niyogiSafetyValvesPhotosynthesis2000; @suzukiReactiveOxygenSpecies2006a]. A ubiquitous defense is a rapidly inducible non-photochemical quenching (NPQ) mechanism that responds to the increased thylakoid pH gradient caused by accumulated light energy [@niyogiSafetyValvesPhotosynthesis2000; @gossBiodiversityNPQ2015]. This form of NPQ is accomplished by the interconversion of xanthophyll cycle pigments—violaxanthin, antheraxanthin, and zeaxanthin (VAZ)—which regulates the capacity for de-excitation of chlorophyll through thermal dissipation instead of photochemistry. Due to higher leaf temperatures and hydraulic limitations, upper canopy leaves spend more time with stomata closed, and therefore require a high capacity to dissipate excess light energy [@niinemetsPhotosynthesisResourceDistribution2007]. Correspondingly, leaves in higher light environments show a greater capacity for NPQ and higher concentrations of VAZ as well as other carotenoids (e.g., beta carotene and lutein) employed as antioxidant defenses [Table `r table_leaf_traits`, @niinemetsAcclimationHighIrradiance1998; @garcia-plazaolaAcclimationAntioxidantPools2004a; @scartazzaInvestigatingEuropeanBeech2016a]. In contrast, leaves deeper in the canopy experience rapid light and temperature surges (can exceed 10˚C) during sunflecks [@waySunflecksTreesForests2012]. In order to maximize carbon uptake and minimize damage during sunflecks, shade-acclimated leaves tend to induce photochemical processes more quickly [@urbanInductionPhotosynthesisImportance2007], and also show a steeper response of NPQ to light compared to sun-acclimated, upper canopy leaves [@scartazzaInvestigatingEuropeanBeech2016a].
 
 Capacity for heat-sensitive, light-dependent (photosynthetically linked) emissions of volatile organic compounds (VOCs), including isoprene and monoterpenes, enhances photosynthetic thermal tolerance by regulating antioxidant defenses and other metabolic processes [@sharkeyIsopreneEmissionPlants2008; @taylorCapacityEmitIsoprene2019; @monsonLeafIsopreneEmission2021; @vickersUnifiedMechanismAction2009; @copoloviciCapacityThermalProtection2005; @riedlmeierMonoterpenesSupportSystemic2017]. 
 Less than half of tree species express significant light-dependent emissions [@kesselmeierBiogenicVolatileOrganic; @taylorIsopreneEmissionStructures2018], such that variation in emissions across the vertical profile can be influenced both by vertical variation in species compositions and plasticity in emission rate capacities [see section 4.4, @taylorNewFieldInstrument2021].
