--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -171,7 +171,7 @@ Canopy foliage absorb a large portion of the direct light in PAR (400-700nm), an
 Along with decreasing PAR, there is a decrease in the red (~685-690 nm) to far red (~730-740 nm) ratio of light as it reaches the forest floor, where understories receive diffused light enriched in near infrared radiation, and absorb light in wavelengths of 700-1000 nm [@decastroLightSpectralComposition2000; @poorterLeafOpticalProperties2000].
 Mid-canopies and understories experience a highly dynamic light environment due to sunflecks, or brief increases in direct solar radiation, caused by small canopy gaps, wind-induced canopy movements or the sun's passage across a dynamically structured canopy surface [@waySunflecksTreesForests2012].
 This light gradient is more pronounced in dense canopies, including broad-leaf and mixed forests (e.g., SCBI, SERC and HARV, Fig. `r fig_NEON_vertical`d), than in forests with more open upper canopies, including many conifer forests [e.g., OSBS, PUUM, and WREF, Fig. `r fig_NEON_vertical`d, Supporting Information Figure `r SIfig_NEON_all`, @chazdonPhotosyntheticLightEnvironments1984; @aussenacInteractionsForestStands2000a; @smithSeasonalDroughtrelatedChanges2019; @tymenQuantifyingMicroenvironmentalVariation2017;  @parkerConsequencesEnvironmentalHeterogeneity2019; @bartemucciOverstoryInfluencesLight2006; @baldocchiSeasonalVariationEnergy1997]. 
-The implications of this light gradient are that leaf traits vary along the vertical gradient [Table 1], and that upper canopy leaves have higher potential photosynthetic rate (see section 4.2), but also greater propensity towards elevated $T_{leaf}$ (see sections 2.2, 4.2).
+The implications of this light gradient are that leaf traits vary along the vertical gradient (Table 1), and that upper canopy leaves have higher potential photosynthetic rate (see section 4.2), but also greater propensity towards elevated $T_{leaf}$ (see sections 2.2, 4.2).
 
 Steep vertical profiles of wind speed, water vapor, CO~2~ and temperature might also occur within canopies, but are more difficult to predict and to generalize on the basis of theoretical first principles than are radiation profiles. 
 Vertical transport at the macroscopic scale of a forest canopy is dominated by turbulent transport rather than by molecular diffusion. 
@@ -221,9 +221,9 @@ Fundamentally, $T_{leaf}$ is determined by the energy balance of a leaf and can 
 High $R_n$ loads can elevate $T_{leaf}$ dramatically above $T_{air}$ (Fig. `r fig_leaf_T`a). 
 Sensible heat flux between leaf and air is regulated by leaf boundary layer conductance, which is greater in smaller leaves (Fig. `r fig_leaf_T`d) and under higher wind speeds (Fig. `r fig_leaf_T`b). 
 Latent heat flux ($\lambda E$) through transpiration has a strong cooling effect, and is determined by stomatal and boundary layer conductances ($g_s$ and $g_b$) and VPD:$g_b$ increases with wind speed, and $g_s$ generally declines as VPD increases due to stomatal closure [@darwinIXObservationsStomata1898; @mottStomatalResponsesHumidity1991].
-Therefore, $T_{leaf}-T_{air}$ decreases in magnitude with wind speed [Fig. `r fig_leaf_T`b, @daudetWindSpeedLeaf1999], increases with RH (Fig. `r fig_leaf_T`c), increases with leaf size (Fig. `r fig_leaf_T`d), and decreases absolutely with $g_s$ (Fig. `r fig_leaf_T`e).
+Therefore, $T_{leaf}-T_{air}$ decreases in magnitude with wind speed [Fig. `r fig_leaf_T`b, @daudetWindSpeedLeaf1999], increases with RH (Fig. `r fig_leaf_T`c), increases with leaf size (Fig. `r fig_leaf_T`d), and $T_{leaf}$ decreases absolutely with $g_s$ (Fig. `r fig_leaf_T`e).
 
-![**Figure `r fig_leaf_T`. Theoretical expectations for variation in the difference between leaf and air temperatures, $T_{Leaf}-T_{air}$, in response to (a) shortwave radiation, (b) wind speed, (c) relative humidity, (d) characteristic leaf width, and (e) stomatal conductance.** Leaf temperatures were modeled using the  *tealeaves* R package of @muir_tealeaves_2019 parameterized to represent a broadleaf species (*Quercus rubra* L.) in a mesic temperate forest (Harvard Forest, Massachusetts, USA) under both moist and drought conditions, as detailed in Supplementary Information Methods `r appendix_tealeaves_methods`. In each scenario, the independent variable was allowed to vary while other parameters were held constant at the values given in the table of biophysical constants. Biohphysical constants in the the table include: shortwave radiation (swr), wind speed (ws), relative humidity (rh), characteristic leaf width (clw), stomatal conductance (gs), air temperature (tair). ](leaf_energy_balance/fig3_leafenergy.png)
+![**Figure `r fig_leaf_T`. Theoretical expectations for variation in the difference between leaf and air temperatures, $T_{Leaf}-T_{air}$, in response to (a) shortwave radiation, (b) wind speed, (c) relative humidity, (d) characteristic leaf width, and (e) stomatal conductance.** Leaf temperatures were modeled using the  *tealeaves* R package of @muir_tealeaves_2019 parameterized to represent a broadleaf species (*Quercus rubra* L.) in a mesic temperate forest (Harvard Forest, Massachusetts, USA) under both moist and drought conditions, as detailed in Supplementary Information Methods `r appendix_tealeaves_methods`. In each scenario, the independent variable was allowed to vary while other parameters were held constant at the values illustrated by dots and given in the table of biophysical constants. Biohphysical constants in the the table include: shortwave radiation (swr), wind speed (ws), relative humidity (rh), characteristic leaf width (clw), stomatal conductance (gs), air temperature (tair). ](leaf_energy_balance/fig3_leafenergy.png)
 
 Under hot and dry conditions, leaves face a trade-off between $T_{leaf}$ regulation and water conservation [@fauset_differences_2018; @kochDiurnalPatternsLeaf1994]. 
 With adequate water, high $\lambda E$ can facilitate heat dissipation, particularly for leaves with smaller size (higher $g_b$) [@songTreeSurfaceTemperature2020; @dongBiophysicalHomoeostasisLeaf2017; @konradLeafTemperatureIts2021a; @leighInfluenceLeafSize2017; @leuzingerTreeSpeciesDiversity2007].
@@ -242,7 +242,7 @@ In contrast, greater RH and lower wind speeds in the understory may limit $\lamb
 The propensity for $T_{leaf}$ to be elevated above $T_{air}$ is not expected to be uniform across time and space, but rather to vary with micrometeorological conditions. Under drought conditions (hot and dry, with higher-than-average solar radiation), when $g_s$ is limiting, there will be a greater propensity for $T_{leaf} - T_{air}$ to be elevated in the upper canopy compared to the understory (Fig. `r fig_leaf_T`).
 This is because sun leaves are exposed to higher irradiance and VPD, and therefore have steeper $g_s$ limitation than shade leaves [Fig. `r fig_leaf_T`e, @leighInfluenceLeafSize2017; @fauset_differences_2018]. 
 In contrast, under conditions conducive to stomatal opening, higher wind speeds and $g_b$ enable cooling in the upper canopy, whereas lower wind and $g_b$ in the understory allow much less evaporative cooling  [Fig. `r fig_leaf_T`b,d, @robertsStomatalBoundaryLayerConductances1990a; @martin_boundary_1999; @leighInfluenceLeafSize2017;  @songTreeSurfaceTemperature2020]. 
-Thus, while understory and within-canopy shade leaves can remain cooler under lower radiation, their environment is less conducive to dissipate excess heat compared to upper-canopy leaves. Limitations in heat dissipation, in combination with their physiological propensities, may cause shade leaves to experience above-optimal $T_{leaf}$ under slight heat or drought stress, or when exposed to higher levels of radiation, for example during sunflecks [@leighInfluenceLeafSize2017; @songTreeSurfaceTemperature2020; @schymanskiStomatalControlLeaf2013].
+Thus, while understory and within-canopy shade leaves can remain cooler under lower radiation, their environment is less conducive to dissipating excess heat compared to upper-canopy leaves. Limitations in heat dissipation, in combination with their physiological propensities, may cause shade leaves to experience above-optimal $T_{leaf}$ under slight heat or drought stress, or when exposed to higher levels of radiation, for example during sunflecks [@leighInfluenceLeafSize2017; @songTreeSurfaceTemperature2020; @schymanskiStomatalControlLeaf2013].
 In addition to lower wind speeds (Fig. `r fig_NEON_vertical`), higher RH in the understory and inner canopy (Fig. `r fig_NEON_vertical`) would also inhibit cooling, as $\lambda E$ is stifled under high RH, resulting in  greater $T_{leaf}$-$T_{air}$ [Fig. `r fig_leaf_T`c, @tibbittsHumidityPlants1979; @songTreeSurfaceTemperature2020;  @perezIncreasingHumidityThreatens2018; @konradLeafTemperatureIts2021a; @dietzVerticalPatternsDuration2007].
 
 Vertical $T_{leaf}$ gradients are also expected to vary with canopy structure (Fig. `r fig_leaf_T`). 
@@ -250,9 +250,9 @@ Forests with closed canopies and high LAI, including tropical and temperate broa
 Therefore, in these forests, leaves in the upper canopy can experience greater $T_{leaf}-T_{air}$ and higher maximum $T_{leaf}$ than do lower-canopy leaves, in some cases exceeding the optima for photosynthesis ($T_{opt}$) because of $g_s$ limitation and high solar radiation loads [@carterExperimentalWarmingTropical2021; @niinemetsShapeLeafPhotosynthetic1999; @doughtyAreTropicalForests2008; @fauset_differences_2018; @mauTemperateTropicalForest2018; @millerOnlySunlitLeaves2021; @rey-sanchez_spatial_2016; @pauTropicalForestTemperature2018]. 
 In contrast, open canopies with lower LAI allow more vertical air mixing and sunlight into the understory. 
 This mixing and light transmission can either neutralize a $T_{leaf}$ gradient or elevate $T_{leaf}-T_{air}$ at lower heights relative to the upper canopy [Fig. `r fig_NEON_vertical`h, Supporting Information Figure `r SIfig_NEON_all`, @hadleyInfluenceKrummholzMat1987; @mullerEvidenceEfficientNonevaporative2021; @martin_boundary_1999; @zweifelMiddayStomatalClosure2002]. 
-The latter can result from a combination of still air at lower heights (Fig. `r fig_NEON_vertical`e), and the 'canopy greenhouse effect' or sunflecks, as mentioned above [@hardwickRelationshipLeafArea2015; @schymanskiStomatalControlLeaf2013], and because shade leaves tend to have lower $g_s$  [@schymanskiStomatalControlLeaf2013]. 
-Similarly, in very open forests or savannas, trees growing close to the ground can experience greater heat stress in their lower than upper canopies due to heat from the soil increasing the Tleaf of the foliage close to the ground [@hadleyInfluenceKrummholzMat1987; @curtis_intracanopy_2019; @johnstonWhatLiesVertical2020]. 
-One  of the few remote sensing studies combining drone lidar and thermal data found strong vertical gradients in midday plant temperature with ~5$^{\circ}$C cooler temperatures lower in the vertical profile of a dense forest stand in the sub-alpine Eastern Swiss Alps [@websterThreedimensionalThermalCharacterization2018]. 
+The latter can result from a combination of still air at lower heights (Fig. `r fig_NEON_vertical`e), and sunflecks or the 'canopy greenhouse effect', as mentioned above [@hardwickRelationshipLeafArea2015; @schymanskiStomatalControlLeaf2013], and because shade leaves tend to have lower $g_s$  [@schymanskiStomatalControlLeaf2013]. 
+Similarly, in very open forests or savannas, trees growing close to the ground can experience greater heat stress in their lower than upper canopies due to heat from the soil increasing the $T_{leaf}$ of the foliage close to the ground [@hadleyInfluenceKrummholzMat1987; @curtis_intracanopy_2019; @johnstonWhatLiesVertical2020]. 
+One of the few remote sensing studies combining drone lidar and thermal data found strong vertical gradients in midday plant temperature with ~5$^{\circ}$C cooler temperatures lower in the vertical profile of a dense forest stand in the sub-alpine Eastern Swiss Alps [@websterThreedimensionalThermalCharacterization2018]. 
 However, the opposite trend was observed for a lone tree surrounded by grass in the same area, with cooler temperatures at the top of the tree crown, indicating a strong influence of closed-canopy shading on vertical temperature gradients [@johnstonWhatLiesVertical2020]. 
 
 ## 3. Leaf traits 
@@ -260,8 +260,8 @@ However, the opposite trend was observed for a lone tree surrounded by grass in 
 Leaf traits vary vertically across forest strata at anatomical, structural and biochemical levels [Table `r table_leaf_traits`, @sackHowStrongIntracanopy2006; @niinemetsWorldwideAnalysisWithincanopy2015; @chenLeafEconomicsSpectrum2020], shaping $T_{leaf}$, leaf metabolism, and leaf thermal sensitivity across forest vertical strata [@michaletzPlantThermoregulationEnergetics2015a;@michaletzEnergeticCarbonEconomic2016a;  @zwienieckiHydraulicLimitationsImposed2004]. 
 The primary driver of this variation is the vertical light gradient, with strong differentiation between sun and shade leaves [@casasSunShadeLeaves2011; @binLeafTraitExpression2022].
 Leaf morphology adjusts to the previously experienced microenvironment during leaf formation in buds, and also during ongoing leaf expansion [@zwienieckiHydraulicLimitationsImposed2004], and the ratio of far red to red light and associated water demands determine the differentiation of traits of sun and shade leaves [@casasSunShadeLeaves2011; @zwienieckiHydraulicLimitationsImposed2004; @keenanGlobalLeafTrait2016]. 
-Therefore, a continuum of sun and shade leaves are observed throughout the vertical gradient where upper (or outer) canopy leaves vary dramatically from canopy-interior and understory leaves due to the differences in biophysical conditions [Fig. `r fig_NEON_vertical`, @binLeafTraitExpression2022], and also because of differences in biological conditions such as tree size and height [@binLeafTraitExpression2022]. 
-Yet, independent of the light environment, traits also vary within species along the ontogenetic trajectory from the understory to the upper canopy. 
+Therefore, a continuum of sun and shade leaves are observed throughout the vertical gradient where upper (or outer) canopy leaves vary dramatically from canopy-interior and understory leaves due to the differences in biophysical conditions (Fig. `r fig_NEON_vertical`), and also because of differences in biological conditions such as tree size and height [@binLeafTraitExpression2022]. 
+Traits also vary within species along the ontogenetic trajectory from the understory to the upper canopy, independent of the light environment. 
 For example, leaf mass per area (LMA), photosynthetic capacity ($A_{max}$ per area) and $g_s$ have been observed to increase with height, independently of light [@thomasPhotosyntheticDifferencesSaplings2002; @houterOntogeneticChangesLeaf2012; @cavender-baresChangesDroughtResponse2000; @binLeafTraitExpression2022]. 
 Therefore, ontogeny is bound to play a role in shaping leaf traits and thermal sensitivity [@carterExperimentalWarmingTropical2021; @niinemetsResponsesForestTrees2010a].
 Yet, much of our understanding of trait coordination is based on the leaf economics spectrum concept developed across diverse species [@wrightWorldwideLeafEconomics2004], which was developed using sun leaves [@chenLeafEconomicsSpectrum2020; @keenanGlobalLeafTrait2016], and further research is needed to fully characterize trait relationships and responses across the full range of microenvironments spanning the forest vertical gradient. 
@@ -316,7 +316,15 @@ Higher photosynthetic rates (per unit leaf area) and more frequent stomatal clos
 
 ## 3.#. Biochemical protection against foliage light and heat damage
 
-Biochemical protection against foliage light and heat damage increase with peak radiation loads, and thus tend to be higher in the upper canopy than in the understory (Table `r table_leaf_traits`). By reducing photosynthesis, heat and associated stomatal closure from VPD can indirectly reduce the capacity to use light energy for photochemistry, thereby increasing the potential for photoinhibition. Accumulation of excess light energy results in overreduction of the electron transport chain and the formation of harmful reactive oxygen species (ROS) [@niyogiSafetyValvesPhotosynthesis2000; @suzukiReactiveOxygenSpecies2006a]. A ubiquitous defense is a rapidly inducible non-photochemical quenching (NPQ) mechanism that responds to the increased thylakoid pH gradient caused by accumulated light energy [@niyogiSafetyValvesPhotosynthesis2000; @gossBiodiversityNPQ2015]. This form of NPQ is accomplished by the interconversion of xanthophyll cycle pigments—violaxanthin, antheraxanthin, and zeaxanthin (VAZ)—which regulates the capacity for de-excitation of chlorophyll through thermal dissipation instead of photochemistry. Due to higher leaf temperatures and hydraulic limitations, upper canopy leaves spend more time with stomata closed, and therefore require a high capacity to dissipate excess light energy [@niinemetsPhotosynthesisResourceDistribution2007]. Correspondingly, leaves in higher light environments show a greater capacity for NPQ and higher concentrations of VAZ as well as other carotenoids (e.g., beta carotene and lutein) employed as antioxidant defenses [Table `r table_leaf_traits`, @niinemetsAcclimationHighIrradiance1998; @garcia-plazaolaAcclimationAntioxidantPools2004a; @scartazzaInvestigatingEuropeanBeech2016a]. In contrast, leaves deeper in the canopy experience rapid light and temperature surges (can exceed 10˚C) during sunflecks [@waySunflecksTreesForests2012]. In order to maximize carbon uptake and minimize damage during sunflecks, shade-acclimated leaves tend to induce photochemical processes more quickly [@urbanInductionPhotosynthesisImportance2007], and also show a steeper response of NPQ to light compared to sun-acclimated, upper canopy leaves [@scartazzaInvestigatingEuropeanBeech2016a].
+Biochemical protection against foliage light and heat damage increase with peak radiation loads, and thus tend to be higher in the upper canopy than in the understory (Table `r table_leaf_traits`). 
+By reducing photosynthesis, heat and associated stomatal closure from VPD can indirectly reduce the capacity to use light energy for photochemistry, thereby increasing the potential for photoinhibition.
+Accumulation of excess light energy results in overreduction of the electron transport chain and the formation of harmful reactive oxygen species [@niyogiSafetyValvesPhotosynthesis2000; @suzukiReactiveOxygenSpecies2006a].
+A ubiquitous defense is a rapidly inducible non-photochemical quenching (NPQ) mechanism that responds to the increased thylakoid pH gradient caused by accumulated light energy [@niyogiSafetyValvesPhotosynthesis2000; @gossBiodiversityNPQ2015].
+This form of NPQ is accomplished by the interconversion of xanthophyll cycle pigments—violaxanthin, antheraxanthin, and zeaxanthin (VAZ)—which regulates the capacity for de-excitation of chlorophyll through thermal dissipation instead of photochemistry.
+Due to higher leaf temperatures and hydraulic limitations, upper canopy leaves spend more time with stomata closed, and therefore require a high capacity to dissipate excess light energy [@niinemetsPhotosynthesisResourceDistribution2007].
+Correspondingly, leaves in higher light environments show a greater capacity for NPQ and higher concentrations of VAZ as well as other carotenoids (e.g., beta carotene and lutein) employed as antioxidant defenses [Table `r table_leaf_traits`, @niinemetsAcclimationHighIrradiance1998; @garcia-plazaolaAcclimationAntioxidantPools2004a; @scartazzaInvestigatingEuropeanBeech2016a].
+In contrast, leaves deeper in the canopy experience rapid light and temperature surges (can exceed 10˚C) during sunflecks [@waySunflecksTreesForests2012].
+In order to maximize carbon uptake and minimize damage during sunflecks, shade-acclimated leaves tend to induce photochemical processes more quickly [@urbanInductionPhotosynthesisImportance2007], and also show a steeper response of NPQ to light compared to sun-acclimated, upper canopy leaves [@scartazzaInvestigatingEuropeanBeech2016a].
 
 Capacity for heat-sensitive, light-dependent (photosynthetically linked) emissions of volatile organic compounds (VOCs), including isoprene and monoterpenes, enhances photosynthetic thermal tolerance by regulating antioxidant defenses and other metabolic processes [@sharkeyIsopreneEmissionPlants2008; @taylorCapacityEmitIsoprene2019; @monsonLeafIsopreneEmission2021; @vickersUnifiedMechanismAction2009; @copoloviciCapacityThermalProtection2005; @riedlmeierMonoterpenesSupportSystemic2017]. 
 Less than half of tree species express significant light-dependent emissions [@kesselmeierBiogenicVolatileOrganic; @taylorIsopreneEmissionStructures2018], such that variation in emissions across the vertical profile can be influenced both by vertical variation in species compositions and plasticity in emission rate capacities [see section 4.4, @taylorNewFieldInstrument2021].
