incorporating some of R1's citations as necessary

--- a/Zotero_references.bib
+++ b/Zotero_references.bib
@@ -1589,6 +1589,22 @@
   file = {/Users/nidhivinod/Zotero/storage/7S7DLPL5/Caron et al. - 2021 - Big trees drive forest structure patterns across a.pdf;/Users/nidhivinod/Zotero/storage/TWDFXLVY/s41598-021-83030-5.html}
 }
 
+@article{carswellPhotosyntheticCapacityCentral2000,
+  title = {Photosynthetic Capacity in a Central {{Amazonian}} Rain Forest},
+  author = {Carswell, F. E. and Meir, P. and Wandelli, E. V. and Bonates, L. C. M. and Kruijt, B. and Barbosa, E. M. and Nobre, A. D. and Grace, J. and Jarvis, P. G.},
+  date = {2000-02-01},
+  journaltitle = {Tree Physiology},
+  volume = {20},
+  number = {3},
+  pages = {179--186},
+  issn = {0829-318X},
+  doi = {10.1093/treephys/20.3.179},
+  url = {https://doi.org/10.1093/treephys/20.3.179},
+  urldate = {2022-02-11},
+  abstract = {The vertical profile in leaf photosynthetic capacity was investigated in a terra firme rain forest in central Amazonia. Measurements of photosynthesis were made on leaves at five levels in the canopy, and a model was fitted to describe photosynthetic capacity for each level. In addition, vertical profiles of photosynthetic photon flux density, leaf nitrogen concentration and specific leaf area were measured. The derived parameters for maximum rate of electron transport (Jmax) and maximum rate of carboxylation by Rubisco (Vcmax) increased significantly with canopy height (P \&lt; 0.05). The highest Jmax for a single canopy level was measured at the penultimate canopy level (20 m) and was 103.9 μmol m−2 s−1 ± 24.2 (SE). The highest Vcmax per canopy height was recorded at the top canopy level (24 m) and was 42.8 ± 5.9 μmol m−2 s−1. Values of Jmax and Vcmax at ground level were 35.8 ± 3.3 and 20.5 ± 1.3 μmol m−2 s−1, espectively. The increase in photosynthetic capacity with increasing canopy height was strongly correlated with leaf nitrogen concentration when examined on a leaf area basis, but was only weakly correlated on a mass basis. The correlation on an area basis can be largely explained by the concomitant decrease in specific leaf area with increasing height. Apparent daytime leaf respiration, on an area basis, also increased significantly with canopy height (P \&lt; 0.05). We conclude that canopy photosynthetic capacity can be represented as an average vertical profile, perturbations of which may be explained by variations in the environmental variables driving photosynthesis.},
+  file = {/Users/nidhivinod/Zotero/storage/HAJZVMHU/Carswell et al. - 2000 - Photosynthetic capacity in a central Amazonian rai.pdf}
+}
+
 @thesis{carterEFFECTSINSITULEAFLEVEL2017,
   type = {Master of Science in Applied Ecology},
   title = {{{EFFECTS OF IN-SITU LEAF-LEVEL CANOPY WARMING IN A NORTHERN HARDWOOD FOREST}}},
@@ -5868,6 +5884,23 @@
   langid = {english},
   keywords = {Air temperatures,Leaf temperatures,Leaf-air temperature difference,Thermal infrared imaging,Thermocouples},
   file = {/Users/nidhivinod/Zotero/storage/VIABQXCI/Kim et al. - 2018 - Thermal infrared imaging of conifer leaf temperatu.pdf}
+}
+
+@article{kitajimaSeasonalLeafPhenotypes1997,
+  title = {Seasonal {{Leaf Phenotypes}} in the {{Canopy}} of a {{Tropical Dry Forest}}: {{Photosynthetic Characteristics}} and {{Associated Traits}}},
+  shorttitle = {Seasonal {{Leaf Phenotypes}} in the {{Canopy}} of a {{Tropical Dry Forest}}},
+  author = {Kitajima, Kaoru and Mulkey, Stephen S. and Wright, S. Joseph},
+  date = {1997},
+  journaltitle = {Oecologia},
+  volume = {109},
+  number = {4},
+  eprint = {4221550},
+  eprinttype = {jstor},
+  pages = {490--498},
+  publisher = {{Springer}},
+  issn = {0029-8549},
+  abstract = {We evaluated the hypothesis that photosynthetic traits differ between leaves produced at the beginning (May) and the end (November-December) of the rainy season in the canopy of a seasonally dry forest in Panama. Leaves produced at the end of the wet season were predicted to have higher photosynthetic capacities and higher water-use efficiencies than leaves produced during the early rainy season. Such seasonal phenotypic differentiation may be adaptive, since leaves produced immediately preceding the dry season are likely to experience greater light availability during their lifetime due to reduced cloud cover during the dry season. We used a construction crane for access to the upper canopy and sampled 1- to 2-month-old leaves marked in monthly censuses for six common tree species with various ecological habits and leaf phenologies. Photosynthetic capacity was quantified as light- and CO₂-saturated oxygen evolution rates with a leaf-disk oxygen electrode in the laboratory (\$\textbackslash text\{O\}\_\{2\textbackslash text\{max\}\}\$) and as light-saturated CO₂ assimilation rates of intact leaves under ambient CO₂ (Amax). In four species, pre-dry season leaves had significantly higher leaf mass per unit area. In these four species, \$\textbackslash text\{O\}\_\{2\textbackslash text\{max\}\}\$ and Amax per unit area and maximum stomatal conductances were significantly greater in pre-dry season leaves than in early wet season leaves. In two species, Amax for a given stomatal conductance was greater in pre-dry season leaves than in early wet season leaves, suggesting a higher photosynthetic water-use efficiency in the former. Photosynthetic capacity per unit mass was not significantly different between seasons of leaf production in any species. In both early wet season and pre-dry season leaves, mean photosynthetic capacity per unit mass was positively correlated with nitrogen content per unit mass both within and among species. Seasonal phenotypic differentiation observed in canopy tree species is achieved through changes in leaf mass per unit area and increased maximum stomatal conductance rather than by changes in nitrogen allocation patterns.},
+  file = {/Users/nidhivinod/Zotero/storage/YS66M7Y9/Kitajima et al. - 1997 - Seasonal Leaf Phenotypes in the Canopy of a Tropic.pdf}
 }
 
 @article{kitaoCanopyNitrogenDistribution2018,
@@ -12875,6 +12908,25 @@
   keywords = {Adaptive forest management,Deadwood,Disturbance patterns,Evaporative cooling,Latent heat,Microclimate}
 }
 
+@article{thomasAsymptoticHeightPredictor1999,
+  title = {Asymptotic {{Height}} as a {{Predictor}} of {{Photosynthetic Characteristics}} in {{Malaysian Rain Forest Trees}}},
+  author = {Thomas, S. C. and Bazzaz, F. A.},
+  date = {1999},
+  journaltitle = {Ecology},
+  volume = {80},
+  number = {5},
+  pages = {1607--1622},
+  issn = {1939-9170},
+  doi = {10.1890/0012-9658(1999)080[1607:AHAAPO]2.0.CO;2},
+  url = {https://onlinelibrary.wiley.com/doi/abs/10.1890/0012-9658%281999%29080%5B1607%3AAHAAPO%5D2.0.CO%3B2},
+  urldate = {2022-02-11},
+  abstract = {Comparative studies of photosynthetic physiology in rain forest trees have focused on differences related to successional status, with the general finding that early-successional species tend to show physiological characteristics of sun plants, while late-successional species show shade-plant characteristics. The present study examines analogous evolutionary responses to vertical gradients in light availability, through an analysis of patterns of photosynthetic variation among late-successional tropical tree species that differ in adult stature. Larger statured tree species are expected to have higher values for light-saturated photosynthetic rate (Amax) as adults, due to the inevitable gradient in light availability through the canopy. However, we argue that larger statured species should also show a higher Amax, and other “sun-plant” characteristics, as saplings under relatively uniform low light conditions in the forest understory. This prediction follows if the potential for photosynthetic acclimation is finite, and if developmental processes that determine adult-phase physiology also affect the physiology of sapling leaves. We examined relationships between photosynthetic parameters and tree species’ stature using comparative data on 28 late-successional species at Pasoh Forest Reserve, West Malaysia. Species chosen for study represent four genera that each include taxa ranging in size from understory treelets to canopy-level trees, thus enabling “phylogenetically corrected” analyses and stronger inference that observed patterns reflect evolutionary convergence. Amax of understory saplings, as measured on a leaf area, mass, or nitrogen basis, was positively correlated with asymptotic height (Hmax) reached by mature trees of a given species. These relationships were similar in each of the four main study genera, thus supporting the hypothesis of an evolutionary response in photosynthetic characteristics to the vertical gradient in light availability through the canopy. Understory species also commonly exhibited higher leaf-level photosynthetic rates at low light levels than did canopy species within a given genus; however, such “crosses” in photosynthetic light response curves were only pronounced when photosynthesis was expressed on a leaf mass basis. Midcanopy leaves from adult trees displayed Amax(area) values similar to leaves from understory saplings of a given species, while Amax(mass) values for adult trees were lower than those of saplings. This pattern corresponded to lower values for specific leaf area in adult trees than in saplings, a difference that was systematically greater in larger statured species. In sum, a range of both adult tree and sapling physiological parameters, including photosynthetic capacity, light saturation point, and leaf nitrogen content, may be predicted as a function of asymptotic species height. Previous research on vertical gradients in photosynthetic characteristics of forest trees has focused on proximate mechanisms, such as light acclimation responses and nutrient reallocation within individual tree canopies. The present study documents evolved differences among species that also contribute to the overall pattern of photosynthetic variation within forest canopies. Our results suggest that much of the variation in leaf-level physiology among late-successional tropical trees is related to an evolved sun–shade trade-off that corresponds to differences in size among species.},
+  langid = {english},
+  keywords = {allometry,asymptotic height,canopy trees,Malaysia,ontogeny,photosynthesis,rain forest,sun/shade physiology,tropical rain forest,understory trees},
+  annotation = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1890/0012-9658\%281999\%29080\%5B1607\%3AAHAAPO\%5D2.0.CO\%3B2},
+  file = {/Users/nidhivinod/Zotero/storage/PAVABM7E/Thomas and Bazzaz - 1999 - Asymptotic Height as a Predictor of Photosynthetic.pdf}
+}
+
 @article{thomasLowMortalityTall2013,
   title = {Low Mortality in Tall Tropical Trees},
   author = {Thomas, R. Q. and Kellner, J. R. and Clark, D. B. and Peart, D. R.},
@@ -13205,6 +13257,41 @@
   keywords = {heat stress,Heteromeles arbutifolia,interaction between stresses,leaf angle,photoinhibition,photosynthesis,sclerophyll,sun-shade acclimation,thermal stability of photo-system II,transpiration cooling,water stress},
   annotation = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1046/j.1365-3040.1997.d01-8.x},
   file = {/Users/nidhivinod/Zotero/storage/XF6CPA8Z/Valladares and Pearcy - 1997 - Interactions between water stress, sun-shade accli.pdf;/Users/nidhivinod/Zotero/storage/8BXRC6JV/j.1365-3040.1997.d01-8.html}
+}
+
+@article{valladaresPlasticPhenotypicResponse2000,
+  title = {Plastic {{Phenotypic Response}} to {{Light}} of 16 {{Congeneric Shrubs}} from a {{Panamanian Rainforest}}},
+  author = {Valladares, Fernando and Wright, S. Joseph and Lasso, Eloisa and Kitajima, Kaoru and Pearcy, Robert W.},
+  date = {2000},
+  journaltitle = {Ecology},
+  volume = {81},
+  number = {7},
+  pages = {1925--1936},
+  issn = {1939-9170},
+  doi = {10.1890/0012-9658(2000)081[1925:PPRTLO]2.0.CO;2},
+  url = {https://onlinelibrary.wiley.com/doi/abs/10.1890/0012-9658%282000%29081%5B1925%3APPRTLO%5D2.0.CO%3B2},
+  urldate = {2022-02-11},
+  abstract = {The comparative phenotypic plasticity of 16 species of tropical rainforest shrubs (genus Psychotria, Rubiaceae) was investigated by growing plants in three light environments on Barro Colorado Island (BCI, Panama). The three light environments gave daily photon flux densities (PPFD) similar to the natural light gradient from shaded forest understory to small and large canopy gaps. Six of the species are principally found in gaps or forest edge environments, whereas the other ten species are principally found in shaded understories. Interactions between light treatment and species resulted in unpredictable mean phenotypic expression across light treatments. Shoot relative growth rates (RGR) were similar for understory and gap species in the low light treatment. Gap species had significantly greater shoot RGR in the intermediate light treatment than in the high light treatment. Mean plasticity was significantly lower for morphological variables when compared to physiological variables, while variation in plasticity was significantly greater for structural variables. Significant differences between gap and understory species were found in the plasticity of six out of the seven variables. The mean phenotypic plasticity of the seven variables was significantly greater for gap than for understory species. The high plasticity of gap species was consistent with the hypothesis that specialization in a more favorable environment increases plasticity. The species exhibited a wide range of leaf longevities, from four to 29 months, with gap species having, on average, shorter leaf life-span than understory species. Mean phenotypic plasticity decreased with increasing leaf longevity. Selection for greater plasticity may be stronger in the gap species because gaps exhibit a relatively predictable decrease in PPFD for which plasticity could be adaptive. While we have found a significant correlation between phenotypic plasticity and habitat affiliation, phylogeny (subgenus ascription) was not correlated with plasticity or with plant performance in any given PPFD treatment, reinforcing the hypothesis that phenotypic plasticity has evolved through natural selection in this diverse genus.},
+  langid = {english},
+  keywords = {Barro Colorado Island,leaf longevity,light acclimation,Panama,phenotypic plasticity,predictability of environmental change,Psychotria,stress syndrome,tropical forest},
+  annotation = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1890/0012-9658\%282000\%29081\%5B1925\%3APPRTLO\%5D2.0.CO\%3B2}
+}
+
+@article{valladaresPlasticPhenotypicResponse2000a,
+  title = {Plastic {{Phenotypic Response}} to {{Light}} of 16 {{Congeneric Shrubs}} from a {{Panamanian Rainforest}}},
+  author = {Valladares, Fernando and Wright, S. Joseph and Lasso, Eloisa and Kitajima, Kaoru and Pearcy, Robert W.},
+  date = {2000},
+  journaltitle = {Ecology},
+  volume = {81},
+  number = {7},
+  eprint = {177282},
+  eprinttype = {jstor},
+  pages = {1925--1936},
+  publisher = {{Ecological Society of America}},
+  issn = {0012-9658},
+  doi = {10.2307/177282},
+  abstract = {The comparative phenotypic plasticity of 16 species of tropical rainforest shrubs (genus Psychotria, Rubiaceae) was investigated by growing plants in three light environments on Barro Colorado Island (BCI, Panama). The three light environments gave daily photon flux densities (PPFD) similar to the natural light gradient from shaded forest understory to small and large canopy gaps. Six of the species are principally found in gaps or forest edge environments, whereas the other ten species are principally found in shaded understories. Interactions between light treatment and species resulted in unpredictable mean phenotypic expression across light treatments. Shoot relative growth rates (RGR) were similar for understory and gap species in the low light treatment. Gap species had significantly greater shoot RGR in the intermediate light treatment than in the high light treatment. Mean plasticity was significantly lower for morphological variables when compared to physiological variables, while variation in plasticity was significantly greater for structural variables. Significant differences between gap and understory species were found in the plasticity of six out of the seven variables. The mean phenotypic plasticity of the seven variables was significantly greater for gap than for understory species. The high plasticity of gap species was consistent with the hypothesis that specialization in a more favorable environment increases plasticity. The species exhibited a wide range of leaf longevities, from four to 29 months, with gap species having, on average, shorter leaf life-span than understory species. Mean phenotypic plasticity decreased with increasing leaf longevity. Selection for greater plasticity may be stronger in the gap species because gaps exhibit a relatively predictable decrease in PPFD for which plasticity could be adaptive. While we have found a significant correlation between phenotypic plasticity and habitat affiliation, phylogeny (subgenus ascription) was not correlated with plasticity or with plant performance in any given PPFD treatment, reinforcing the hypothesis that phenotypic plasticity has evolved through natural selection in this diverse genus.},
+  file = {/Users/nidhivinod/Zotero/storage/AFCZDLQK/Valladares et al. - 2000 - Plastic Phenotypic Response to Light of 16 Congene.pdf}
 }
 
 @article{valladaresShadeToleranceKey2008,
